# 2nd-brain

./: .env.example  .gitignore  CATALOG.md  README.md  build_index.py  chat.py  generate_catalog.py  process_all.py  process_videos.py  pyproject.toml  reprocess_summaries.py  requirements.txt  update.py
config/: settings.example.yaml
data/metadata/: dr-tran-van-phuc.json
data/summaries/: -W7pq4gqujE.json  -W7pq4gqujE.md  -mBE1o4B71o.json  -mBE1o4B71o.md  060PaZS3MF4.json  060PaZS3MF4.md  0lBz7h3y_IA.json  0lBz7h3y_IA.md  1Ft9vsq3QG4.json  1Ft9vsq3QG4.md  1NQn3GxcmIs.json  1NQn3GxcmIs.md  1tMUMkesEB4.json  1tMUMkesEB4.md  2scrCIXK64s.json  2scrCIXK64s.md  353QEKs9A6Q.json  353QEKs9A6Q.md  3ei2dG0xlWc.json  3ei2dG0xlWc.md  4XOUQoiX_cw.json  4XOUQoiX_cw.md  4dW_jEnXyaI.json  4dW_jEnXyaI.md  5yh9pbISrm8.json  5yh9pbISrm8.md  6S9b4pIaw74.json  6S9b4pIaw74.md  73aRPOk1ysE.json  73aRPOk1ysE.md  8ES-drr78MY.json  8ES-drr78MY.md  8HXSUShdMIA.json  8HXSUShdMIA.md  8U2PgueBcII.json  8U2PgueBcII.md  8Y_KVAmv63w.json  8Y_KVAmv63w.md  8aMwAF6nXnM.json  8aMwAF6nXnM.md  (+180 more)
docs/: TECHNICAL_SPEC.md  USER_GUIDE.md
knowledge_base/: index.md
knowledge_base/topics/: diseases.md  lifestyle.md  nutrition.md  prevention.md
scripts/: run_pipeline.py
src/: __init__.py
src/app/: __init__.py  chat.py  main.py  rag_engine.py
src/crawler/: __init__.py  main.py  transcript_extractor.py  youtube_scraper.py
src/processor/: __init__.py  categorizer.py  enhanced_summarizer.py  main.py  summarizer.py
src/storage/: __init__.py  (+2 more)
tests/: __init__.py  test_categorizer.py  test_crawler.py
(+1 files in other folders)
